--- a/Linear_Regression/1. Boston Housing/Boston_Housing.ipynb
+++ b/Linear_Regression/1. Boston Housing/Boston_Housing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c33ed744",
+   "id": "9d423f74",
    "metadata": {},
    "source": [
     "## Making the necessary Imports"
@@ -23,12 +23,15 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.preprocessing import scale\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "import seaborn as sns\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b6e523fe",
+   "id": "a274d8ae",
    "metadata": {},
    "source": [
     "## Load the Boston Housing DataSet"
@@ -58,8 +61,198 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "99601dee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'RAD',\n",
+       "       'TAX', 'PTRATIO', 'B', 'LSTAT'], dtype='<U7')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data.feature_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "22cebf04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boston_df=pd.DataFrame(data=np.c_[boston_data['data'],boston_data['target']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5dc76fc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00632</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>2.31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.538</td>\n",
+       "      <td>6.575</td>\n",
+       "      <td>65.2</td>\n",
+       "      <td>4.0900</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>296.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>396.90</td>\n",
+       "      <td>4.98</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.02731</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.469</td>\n",
+       "      <td>6.421</td>\n",
+       "      <td>78.9</td>\n",
+       "      <td>4.9671</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>396.90</td>\n",
+       "      <td>9.14</td>\n",
+       "      <td>21.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.02729</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.469</td>\n",
+       "      <td>7.185</td>\n",
+       "      <td>61.1</td>\n",
+       "      <td>4.9671</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>392.83</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.03237</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>6.998</td>\n",
+       "      <td>45.8</td>\n",
+       "      <td>6.0622</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>394.63</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>33.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.06905</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>7.147</td>\n",
+       "      <td>54.2</td>\n",
+       "      <td>6.0622</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>396.90</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>36.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0     1     2    3      4      5     6       7    8      9     10  \\\n",
+       "0  0.00632  18.0  2.31  0.0  0.538  6.575  65.2  4.0900  1.0  296.0  15.3   \n",
+       "1  0.02731   0.0  7.07  0.0  0.469  6.421  78.9  4.9671  2.0  242.0  17.8   \n",
+       "2  0.02729   0.0  7.07  0.0  0.469  7.185  61.1  4.9671  2.0  242.0  17.8   \n",
+       "3  0.03237   0.0  2.18  0.0  0.458  6.998  45.8  6.0622  3.0  222.0  18.7   \n",
+       "4  0.06905   0.0  2.18  0.0  0.458  7.147  54.2  6.0622  3.0  222.0  18.7   \n",
+       "\n",
+       "       11    12    13  \n",
+       "0  396.90  4.98  24.0  \n",
+       "1  396.90  9.14  21.6  \n",
+       "2  392.83  4.03  34.7  \n",
+       "3  394.63  2.94  33.4  \n",
+       "4  396.90  5.33  36.2  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "05ee29af",
+   "id": "ba321dff",
    "metadata": {},
    "source": [
     "## Preparing the Data Frame"
@@ -67,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "f1c6d0af",
    "metadata": {},
    "outputs": [
@@ -214,7 +407,7 @@
        "4     18.7  396.90   5.33   36.2  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "id": "1cfbf9ff",
    "metadata": {},
    "outputs": [
@@ -275,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eafe57c",
+   "id": "9274b990",
    "metadata": {},
    "source": [
     "## Prepare independent and dependent variables"
@@ -283,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "45e88534",
    "metadata": {},
    "outputs": [],
@@ -296,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "ddb10c9b",
    "metadata": {},
    "outputs": [
@@ -322,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ddc2934",
+   "id": "59f5e0a1",
    "metadata": {},
    "source": [
     "## Linear Regression without any Pre-processing"
@@ -330,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "709aa53d",
    "metadata": {
     "scrolled": true
@@ -342,8 +535,8 @@
      "text": [
       "y_train shape :  (354,)\n",
       "y_pred shape :  (152,)\n",
-      "Mean Squared Error:  32.72507169281495\n",
-      "Regressor Score:  0.6069792285352372\n"
+      "Mean Squared Error:  27.195965766883234\n",
+      "Regressor Score:  0.6733825506400193\n"
      ]
     }
    ],
@@ -366,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c6171ff",
+   "id": "438b7c01",
    "metadata": {},
    "source": [
     "## Perform correlation to identify significant variables and display on a Seaborn HeatMap"
@@ -374,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "977e29bd",
    "metadata": {},
    "outputs": [],
@@ -384,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "f6527bf6",
    "metadata": {},
    "outputs": [
@@ -409,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "b85e675b",
    "metadata": {},
    "outputs": [
@@ -432,7 +625,7 @@
        " Text(0, 13.5, 'LSTAT')]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -458,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50c8f730",
+   "id": "de48f2e7",
    "metadata": {},
    "source": [
     "## Retain significant variables RM and LSTAT for further modeling"
@@ -466,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "1a32c3c7",
    "metadata": {},
    "outputs": [],
@@ -480,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7909b610",
+   "id": "42f12f07",
    "metadata": {},
    "source": [
     "## Scale the data"
@@ -488,8 +681,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "d6a19df9",
+   "execution_count": 12,
+   "id": "eb477b88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "fe2c4edd",
    "metadata": {},
    "outputs": [
@@ -525,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fea88e7",
+   "id": "63789624",
    "metadata": {},
    "source": [
     "## Perform Linear regression on significant features and scaled data"
@@ -533,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "id": "9c87467c",
    "metadata": {},
    "outputs": [
@@ -568,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de99a3b1",
+   "id": "6aa519e1",
    "metadata": {},
    "source": [
     "## Define a score function with Cross Validation"
@@ -576,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "347f4785",
    "metadata": {},
    "outputs": [],
@@ -589,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "af751960",
    "metadata": {},
    "outputs": [
@@ -615,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74a72f2c",
+   "id": "99deacb3",
    "metadata": {},
    "source": [
     "## Identify number of folds for best model performance"
@@ -623,10 +816,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "433903d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Num_Folds    2.000000\n",
+       "CV_Score     0.477497\n",
+       "Name: 0, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cross_val_df=pd.DataFrame(columns=['CV_Score'])\n",
     "for i in range(2,20):\n",
@@ -642,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7154931",
+   "id": "bbf72e26",
    "metadata": {},
    "source": [
     "## Identify score for New model with pre-processed data and Cross Validation applied"
@@ -650,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "09f2adea",
    "metadata": {},
    "outputs": [
@@ -669,7 +875,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6c4fcdd",
+   "id": "1cc2240a",
    "metadata": {},
    "source": [
     "## Apply Lasso Regularization"
@@ -677,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "id": "911edb4c",
    "metadata": {},
    "outputs": [
@@ -711,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "695e3f38",
    "metadata": {},
    "outputs": [
@@ -746,16 +952,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "372cad1d",
+   "cell_type": "markdown",
+   "id": "18f4aafb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Find the optimal alpha with grid search and identify the best score"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "a488ea65",
    "metadata": {},
    "outputs": [
@@ -770,7 +976,6 @@
     }
    ],
    "source": [
-    "# find optimal alpha with grid search\n",
     "alpha = [0.001, 0.01, 0.1, 1, 10, 100, 1000]\n",
     "param_grid = dict(alpha=alpha)\n",
     "grid = GridSearchCV(estimator=lassoModelChosen, param_grid=param_grid, scoring='r2', verbose=1, n_jobs=-1)\n",
@@ -781,9 +986,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "5c8f7cb0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -817,16 +1024,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "c9ed941f",
+   "cell_type": "markdown",
+   "id": "7fb7a320",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Apply Ridge Regression"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "0b762d42",
    "metadata": {},
    "outputs": [
@@ -842,10 +1049,7 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    " \n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size =0.3,\n",
-    "                                                    random_state = 0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size =0.3, random_state = 0)\n",
     "  \n",
     "print(\"X_train shape : \", X_train.shape)\n",
     "print(\"X_test shape  : \", X_test.shape)\n",
@@ -855,47 +1059,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "id": "37e40c05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ridge_df=pd.DataFrame(columns=['Alpha','CV_Score'])\n",
-    "for i in range(1,1000):\n",
-    "    ridgeModel = Ridge(alpha = i * 0.003)\n",
-    "    ridgeModel.fit(X_train,y_train)\n",
-    "    scores = cross_val_score(ridgeModel,X,y)\n",
-    "    avg_cross_val_score = np.mean(scores)\n",
-    "    ridge_df.loc[i-1] = [i* 0.003,avg_cross_val_score*100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "3958dcb7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Alpha        2.997000\n",
-       "CV_Score    31.047248\n",
-       "Name: 998, dtype: float64"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ridge_df.sort_values(by='CV_Score',ascending=False).iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "5a6953a1",
    "metadata": {},
    "outputs": [
     {
@@ -907,6 +1072,16 @@
     }
    ],
    "source": [
+    "ridge_df=pd.DataFrame(columns=['Alpha','CV_Score'])\n",
+    "for i in range(1,1000):\n",
+    "    ridgeModel = Ridge(alpha = i * 0.003)\n",
+    "    ridgeModel.fit(X_train,y_train)\n",
+    "    scores = cross_val_score(ridgeModel,X,y)\n",
+    "    avg_cross_val_score = np.mean(scores)\n",
+    "    ridge_df.loc[i-1] = [i* 0.003,avg_cross_val_score*100]\n",
+    "\n",
+    "ridge_df.sort_values(by='CV_Score',ascending=False).iloc[0]\n",
+    "\n",
     "ridgeModelChosen = Ridge(alpha=2.997)\n",
     "ridgeModelChosen.fit(X_train,y_train)\n",
     "print(ridgeModelChosen.score(X_test,y_test))"
@@ -914,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "id": "65fde50b",
    "metadata": {},
    "outputs": [
@@ -949,8 +1124,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd811c1d",
+   "metadata": {},
+   "source": [
+    "## Find the optimal alpha with grid search and identify the best score"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "id": "eb920358",
    "metadata": {},
    "outputs": [
@@ -976,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "id": "30e2e4f1",
    "metadata": {},
    "outputs": [
